--- a/01-penguins.qmd
+++ b/01-penguins.qmd
@@ -149,4 +149,9 @@ Use `filter()` to create a subset from `penguins` that contains observations for
 **In the YAML header (between the three dashes at the top of the document)**
 
 1.  Add your name as the author of this document
+
 2.  Render the document and fix any errors
+
+## Task 8: Commit & Push & Issue
+
+-   Refer back to the instructions on the course website to complete the assignment: <https://ds4owd-002.github.io/website/assignments/md-03/am-03-1-data-transformation.html>
